--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dixio",
+  "name": "webcage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,3 +19,4 @@
     "nodemon": "^2.0.7"
   }
 }
+
